--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.commonsware.android.appwidget.dice"
+    package="pl.klimatbezsadzy"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,33 +16,35 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:icon="@drawable/cw"
+        android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <receiver
-            android:icon="@drawable/cw"
+            android:icon="@drawable/icon"
             android:label="@string/app_name"
-            android:name=".AppWidget" >
+            android:name="pl.klimatbezsadzy.AppWidget" >
             <intent-filter >
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
-
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_provider" />
         </receiver>
 
         <activity
-            android:name="PairOfDiceActivity"
+            android:name="KlimatBezSadzyActivity"
             android:theme="@android:style/Theme.NoDisplay" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="pl.klimatbezsadzy.Info" >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
-        <service
-            android:name=".AllertService" />
+        <service android:name="pl.klimatbezsadzy.AllertService" />
     </application>
 
 </manifest>
