--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,8 @@
 
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:debuggable="false" >
         <receiver
             android:icon="@drawable/icon"
             android:label="@string/app_name"
