--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:debuggable="false" >
+        android:debuggable="true" >
         <receiver
             android:icon="@drawable/icon"
             android:label="@string/app_name"
