--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.klimatbezsadzy"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="5"
@@ -42,6 +42,8 @@
         <activity android:name="pl.klimatbezsadzy.Info" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
+                                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                
             </intent-filter>
         </activity>
 
